deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cocklebur-service
  labels:
    app.kubernetes.io/name: cocklebur-server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: cocklebur-server
